...
            .fillMaxSize()
            .padding(horizontal = 16.dp),
        verticalArrangement = Arrangement.Center
    ) {
        Text(
            modifier = Modifier.padding(vertical = 30.dp),
            text = "Welcome to PolyZoj community!",
            fontSize = 24.sp,
        )

        CustomTextField(
            label = "Username",
            value = uiState.username,
            onValueChange = { if (!uiState.isLoading) viewModel.onUsernameChange(it) },
            placeholder = "Enter your username"
        )

        Spacer(modifier = Modifier.height(10.dp))

        CustomPasswordField(
            label = "Password",
            value = uiState.password,
            onValueChange = { if (!uiState.isLoading) viewModel.onPasswordChange(it) },
            placeholder = "Enter your password"
        )

        if (uiState.errorMessage.isNotEmpty()) {
            Text(
                text = uiState.errorMessage,
                color = MaterialTheme.colorScheme.error,
...
            )
        }

        Spacer(modifier = Modifier.height(10.dp))

        BigButton(
            text = if (uiState.isLoading) "Processing..." else "Log in",
            onClick = { if (!uiState.isLoading) viewModel.login(context) }
        )

        Spacer(modifier = Modifier.height(10.dp))

        Text(
            modifier = Modifier.fillMaxWidth(),
            text = "Don't have an account?",
            textAlign = TextAlign.Center,
            fontSize = 16.sp
        )

        Spacer(modifier = Modifier.height(5.dp))

        Text(
            modifier = Modifier
                .fillMaxWidth()
                .clickable { navController.navigate(Routes.REGISTRATION) },
            text = "Register",
            textAlign = TextAlign.Center,
            fontSize = 16.sp
        )

        if (uiState.isLoading) {
            Box(
...
